# MCMC4WF

./: CMakeLists.txt  LICENCE  README.md  main.cpp  setup.py
examples/: MCMCHorse.py  test.py
src/: CMakeLists.txt  MCMC4WF_pybind.cpp  MCMCOptions.cpp  MCMCOptions.h  MCMCSampler.cpp  MCMCSampler.h  WrightFisher.h  __init__.py
